chore: fix dark mode theme

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,6 +18,26 @@ body {
   color: black;
 }
 
+.dark {
+  body {
+    background-color: #0a0a0a;
+    color: #ededed;
+  }
+  p {
+    color: #ededed;
+  }
+}
+
+.light {
+  body {
+    background-color: #ffffff;
+    color: #000000;
+  }
+  p {
+    color: #000000;
+  }
+}
+
 p {
   color: black;
 }
